[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailuntz"
version = "1.0.0"
description = "A colorful and elegant personal CV CLI tool"
readme = "../redeme.md"
authors = [{ name = "Ailuntz", email = "ailuntz@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["cli", "cv", "resume", "personal", "portfolio", "terminal"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://ailuntz.com"
Source = "https://github.com/ailuntz/cli"
"Bug Reports" = "https://github.com/ailuntz/cli/issues"

[project.scripts]
cv = "ailuntz.cli:main"
